tests/format/flow-repo/docblock_flow/use_strict_with_flow.js
"use strict";
/* @flow */

("": void); // error
